# DxFSM

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  dxfsmConfig.cmake.in
doc/Writerside/topics/: Overview.md
examples/: CMakeLists.txt  traffic_light.cpp
include/: CoFSM.hpp
include/dxfsm/: dxfsm.hpp
test/: CMakeLists.txt  basic.cpp  collatz.cpp  common.hpp  event.cpp  guards.cpp  rebind.cpp  remote.cpp  resets.cpp  usage_errors.cpp
